class Task:
    """
    Represents a task with scheduling capabilities.
    
    Attributes:
        id (str): A unique identifier for the task.
        description (str): A brief description of the task.
    """

    def __init__(self, task_id: str, description: str):
        """
        Initializes a Task instance.

        Args:
            task_id (str): A unique identifier for the task.
            description (str): A brief description of the task.
        """
        self.id = task_id
        self.description = description

    def schedule(self) -> None:
        """
        Schedules the task.
        
        This method can be extended to integrate with an actual scheduling system.
        """
        print(f"Task {self.id} has been scheduled.")

    def __repr__(self) -> str:
        """
        Provides a string representation of the task.

        Returns:
            str: A string describing the task.
        """
        return f"Task(id={self.id}, description={self.description})"
